[ :sparkles: | #271 |  feature ] 카테고리 기준 상품 조회 restdocs반영 및 controller 테스트 완료